# mirs_mg5

./: README.md
esp_client/: package.xml
esp_client/src/: reboot.cpp
esp_srvs/: CMakeLists.txt
mirs/: CMakeLists.txt  package.xml  params.yaml
mirs/config/: config.yaml
mirs/launch/: mirs.launch.py  mirs_minimum.launch.py  pc_slam.launch.py
mirs/src/: encoder_reset.cpp  odometry_publisher.cpp  parameter_publisher.cpp  parameter_update.cpp  reboot.cpp
mirs_msgs/: CMakeLists.txt
src/esp_client/: CMakeLists.txt
src/esp_client/src/: encoder_reset.cpp  parameter_update.cpp
src/esp_srvs/: package.xml
